--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-custom-range-slider": "^0.2.3",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
